--- a/packages/lambda-rest-api/tsconfig.json
+++ b/packages/lambda-rest-api/tsconfig.json
@@ -2,8 +2,9 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "lib",
-    "rootDir": ".",
-    "types": ["jest", "node"]
+    "rootDir": "src",
+    "types": ["jest", "node"],
+    "tsBuildInfoFile": "./lib/tsconfig.tsbuildinfo"
   },
-  "include": ["src", "test"]
+  "include": ["src"]
 }
