--- a/packages/lambda-rest-api/package.json
+++ b/packages/lambda-rest-api/package.json
@@ -39,9 +39,9 @@
   },
   "files": [
     "CHANGELOG.md",
-    "/lib/*.d.ts",
-    "/lib/*.js",
-    "/lib/*.json"
+    "/lib/**/*.d.ts",
+    "/lib/**/*.js",
+    "/lib/**/*.json"
   ],
   "publishConfig": {
     "registry": "https://twin-digital-162712779706.d.codeartifact.us-east-1.amazonaws.com/npm/shared/",
