--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "lint": "run-p lint:eslint lint:package-json",
     "lint:eslint": "eslint -c .eslintrc.js .",
     "lint:package-json": "npmPkgJsonLint --ignorePath .npmpackagejsonlintignore .",
-    "login:npm": "run-s login:npm:*",
-    "login:npm:twin-digital": "aws codeartifact login --tool npm --domain twin-digital --repository shared --namespace '@twin-digital'",
+    "login:npm": "aws codeartifact login --tool npm --domain twin-digital --domain-owner 934979133063 --repository shared --namespace '@twin-digital'",
     "publish-packages": "npx changeset publish",
     "test": "jest --passWithNoTests",
     "typecheck": "tsc",
