--- a/packages/lambda-rest-api/package.json
+++ b/packages/lambda-rest-api/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "ajv": "^8.12.0",
     "@types/aws-lambda": "^8.10.109",
     "@types/jest": "29.x",
     "@types/lodash": "4.x",
