--- a/packages/s3-repository/package.json
+++ b/packages/s3-repository/package.json
@@ -5,16 +5,18 @@
   "license": "MIT",
   "main": "lib/index.js",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.241.0",
+    "@aws-sdk/client-s3": "^3.245.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@types/jest": "29.x",
     "@types/lodash": "4.x",
     "@types/node": "16.x",
+    "@types/uuid": "9.x",
     "jest": "29.",
     "ts-jest": "29.",
-    "typescript": "4.x"
+    "typescript": "4.x",
+    "uuid": "^9.0.0"
   },
   "author": "Sean Kleinjung",
   "ace": {
